--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,31 +1,10 @@
 log4j.rootLogger=WARN, stdout
 
-log4j.logger.limone=DEBUG, stdout
-log4j.additivity.limone=false
+log4j.logger.com.savarese=DEBUG, stdout
+log4j.additivity.com.savarese=false
 
-log4j.logger.limone.util.spring=WARN, stdout
-log4j.additivity.limone.util.spring=false
-
-log4j.logger.org.apache.wicket=WARN, stdout
-log4j.additivity.org.apache.wicket=false
-
-log4j.logger.org.springframework=WARN, stdout
-log4j.additivity.org.springframework=false
-
-log4j.logger.org.springframework.jms.listener.DefaultMessageListenerContainer=WARN, stdout
-log4j.additivity.org.springframework=false
-
-log4j.logger.org.springframework.transaction=WARN, stdout
-log4j.additivity.org.springframework.transaction=false
-
-log4j.logger.org.springframework.jdbc=WARN, stdout
-log4j.additivity.org.springframework.jdbc=false
-
-log4j.logger.org.apache.wicket.util=WARN, stdout
-log4j.additivity.org.apache.wicket.util=false
-
-log4j.logger.java.sql=WARN, stdout
-log4j.additivity.java.sql=false
+log4j.logger.rocksaw=DEBUG, stdout
+log4j.additivity.rocksaw=false
 
 # Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
