Let's see if Travis will work, at least

--- a/src/main/native/Makefile
+++ b/src/main/native/Makefile
@@ -58,6 +58,8 @@ CLEAN_EXTENSIONS = o $(LIBEXTENSION)
 
 LIBROCKSAW = $(LIBNAME).$(LIBEXTENSION)
 
+.PHONY: clean directories
+
 all: directories $(LIBROCKSAW)
 
 directories:
