--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ sudo: required
 services:
   - docker
 
+cache:
+  directories:
+  - $HOME/.m2
+
 before_install:
   - docker build -t mlaccetti/rocksaw:develop .
 
 script:
-  - docker run --rm -v $(pwd):/opt/rocksaw mlaccetti/rocksaw:develop
+  - docker run --rm -v $(pwd):/opt/rocksaw -v $HOME/.m2:/root/.m2 mlaccetti/rocksaw:develop
