Apparently that warning command doesn't exist anymore?

--- a/src/main/native/Makefile
+++ b/src/main/native/Makefile
@@ -22,7 +22,7 @@ CC       = gcc
 SHARED   = -shared
 CFLAGS   = -Wall -O2 -pipe -pthread
 WINSOCK  = ws2_32
-EXTRA_LDFLAGS  = -fPIC -Wl
+EXTRA_LDFLAGS  = -fPIC
 EXTRA_CPPFLAGS =
 LDFLAGS  = $(EXTRA_LDFLAGS)
 CPPFLAGS = $(EXTRA_CPPFLAGS)
