Updated pom.xml to compile on Java 11+

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <source>8</source>
   </properties>
 
   <build>
