--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.3</version>
+        <version>2.22.2</version>
         <configuration>
           <forkMode>once</forkMode>
           <argLine>-Djava.library.path=${project.basedir}/target/native</argLine>
+          <redirectTestOutputToFile>true</redirectTestOutputToFile>
         </configuration>
       </plugin>
       <plugin>
@@ -215,10 +216,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.junit</groupId>
-      <artifactId>junit-bom</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
       <version>5.7.0</version>
-      <type>pom</type>
       <scope>test</scope>
     </dependency>
   </dependencies>
